[package]
name = "conventional-commitlint"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
hex = "0.4.3"
tokio = { version = "1.28.2", features = ["rt", "process", "io-util", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.8", features = ["io"] }
