[package]
name = "conventional-commitlint"
version = "0.1.4-SNAPSHOT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
tokio = { version = "1.28.2", features = ["rt", "process", "io-util", "macros", "rt-multi-thread"] }
